--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,7 +1,6 @@
 name: Cursed Archives Uploader
 on:
   schedule:
-    # Runs at 6:00 PM UTC every day
     - cron: '0 18 * * *'
   workflow_dispatch:
 
@@ -13,15 +12,16 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          # UPDATED: Using Python 3.12 to avoid Google deprecation warnings
+          python-version: '3.12' 
       
-      - name: Install
+      - name: Install Tools
         run: |
           sudo apt-get update
           sudo apt-get install ffmpeg
           pip install -r requirements.txt
           
-      - name: Run
+      - name: Run Bot
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
