--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ groq
 gradio_client
 requests
 imageio[ffmpeg]
-google-generativeai
+google-genai
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
