--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,21 +1,24 @@
 name: Cursed Archives Daily
 on:
   schedule:
-    - cron: '0 18 * * *'
-  workflow_dispatch:
+    - cron: '0 18 * * *' # Runs daily at 18:00 UTC
+  workflow_dispatch: # Allows you to trigger it manually
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 120 # Increased to 2 hours because AI generation (Chatterbox/FramePack) can have queues
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      
+          cache: 'pip' # Automatically caches your dependencies for faster daily runs
+
       - name: Install System Tools
         run: |
           sudo apt-get update
@@ -23,16 +26,29 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
           
       - name: Run Bot
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}
-          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+          # Required for Gemini 3 Flash Preview & YouTube
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
           YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
           YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
+          # Required for Hugging Face Spaces (Chatterbox/FramePack)
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          # Notifications
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          # Keep GROQ if you still use it for anything else
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         run: python main.py
+
+      - name: Save Video as Artifact
+        if: always() # Runs even if the "Run Bot" step fails halfway
+        uses: actions/upload-artifact@v4
+        with:
+          name: generated-shorts
+          path: output_short.mp4 # Matches the filename in your main.py
+          retention-days: 7 # Keep the video on GitHub for a week
