--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 moviepy==1.0.3
-requests
-pillow
-google-genai
+pillow>=10.0.0
+numpy<2.0.0
+google-genai>=1.0.0
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
-gradio_client
-numpy
+gradio_client>=2.0.0
+requests
