--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-moviepy==1.0.3
-pillow>=10.0.0
-numpy<2.0.0
-google-genai>=1.0.0
+# --- AI & Brain ---
+google-genai>=1.0.0      # Required for Gemini 3 Flash and "Thinking" models
+gradio_client>=2.0.3     # Required for the 2026 Chatterbox/FramePack APIs
+requests>=2.32.0
+
+# --- Video & Sound (Fixed for 2026 stability) ---
+moviepy==1.0.3           # Older version ensures 'moviepy.editor' works
+numpy<2.0.0              # CRITICAL: MoviePy 1.0.3 crashes on NumPy 2.x
+pillow>=10.4.0           # Modern image handling (requires the ANTIALIAS fix in code)
+
+# --- Google Auth & YouTube ---
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
-gradio_client>=2.0.0
-requests
